--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "node-polyglot": "0.3.0",
         "node-uuid": "1.4.1",
         "nodemailer": "0.5.13",
+		"pg": "latest",
         "rss": "0.2.1",
         "semver": "2.2.1",
         "showdown": "https://github.com/ErisDS/showdown/archive/v0.3.2-ghost.tar.gz",
@@ -53,8 +54,7 @@
         "unidecode": "0.1.3",
         "validator": "3.4.0",
         "when": "2.7.0",
-        "xml": "0.0.12",
-		"pg": "latest"
+        "xml": "0.0.12"
     },
     "optionalDependencies": {
         "mysql": "2.1.1"
